# OptimisationBasedControl

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  Pend.m  ctrl_cartpole.csv  ctrl_finger.csv  find_mjkey  plotting.m  readme.md
app/: CMakeLists.txt
app/0_preliminaries/: CMakeLists.txt
app/2.1_LQR/: CMakeLists.txt  LQR-Acrobot.cpp  LQR-pendulum.cpp
app/additional/: CMakeLists.txt  analytical_cost.cpp  derivative.cc  derivative.cpp  simulate.cc  simulate.cpp  uitools.h
app/tasks/: CMakeLists.txt  CMakeLists.txt.save  fic_ilqr_cartpole.cpp  fic_ilqr_extended_cartpole.cpp  fic_ilqr_mppi_finger.cpp  fic_ilqr_planar_3_link.cpp  hand_manip_cp.cpp  ilqr_cartpole.cpp  ilqr_control.cpp  ilqr_double_integrator.cpp  ilqr_finger.cpp  ilqr_franka.cpp  ilqr_franka_sparse.cpp  ilqr_pendulum.cpp  ilqr_planar.cpp  mppi_control_cartpole.cpp  mppi_control_finger.cpp  mppi_ilqr_cartpole.cpp  mppi_ilqr_cartpole_par.cpp  mppi_ilqr_double_cartpole.cpp  mppi_ilqr_double_integrator_par.cpp  mppi_ilqr_finger.cpp  mppi_ilqr_finger_par.cpp  mppi_ilqr_planar3.cpp  mppi_ilqr_planar_obstacle.cpp  mppi_ilqr_planar_obstacle_par.cpp  mppi_ilqr_planar_push.cpp  mppi_ilqr_planar_push_2d.cpp  mppi_ilqr_planar_push_2d_par.cpp  mppi_ilqr_sh_hand.cpp  mppi_ilqr_sh_hand_par.cpp  mppi_ilqr_sparse_double_integrator_par.cpp  mppi_ilqr_walker_par.cpp  openmp_test.cpp  par_mppi_ilqr_cartpole.cpp  par_mppi_ilqr_finger.cpp  par_mppi_ilqr_hand_manip.cpp  par_mppi_ilqr_planar_obstacle.cpp  par_mppi_ilqr_planar_push_2d.cpp
bindings/: CMakeLists.txt  example_binding.cpp  example_mj_derivative.cpp
bindings/example/: __init__.py  setup.py
bindings/mj_derivative/: __init__.py  setup.py
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/app/: Makefile  cmake_install.cmake
build-release/app/0_preliminaries/: Makefile  cmake_install.cmake
build-release/app/2.1_LQR/: LQR-Acrobot  Makefile  cmake_install.cmake
build-release/app/additional/: Makefile  cmake_install.cmake
build-release/src/: Makefile  cmake_install.cmake
build-release/src/controller/: Makefile  cmake_install.cmake
build-release/src/utilities/: Makefile  cmake_install.cmake
etc/: CMakeLists.txt  uitools.c
include/: derivative.cpp
matlab_scripts/: DDP_K_0_I_0.fig  DDP_K_1_1fig.fig  PI_K_0_I_0.fig  PI_K_1_I_1.fig  barrier_func.m  clean_sv_data.m  control_sampling.m  derivative_comp.m  euler_integration.m  importance_sampling_example.asv  importance_sampling_example.m  kl_control.asv  kl_control.m  log_hi.m  log_lo.m  plotting.asv  plotting.m  point_mass.asv  point_mass.m  result_plot.m  sep_data_per_goal.m  sp_value.m  sys.m  temporal_averaging.asv  temporal_averaging.m
matlab_scripts/results/: Obstacle Avoidance Zoom.fig
matlab_scripts/value_iteration/: CTValueIteration.m  Pendulum.m  SpringMass.m  SpringMassStateSpace.m
models/: 2link.xml  Acrobot.xml  Acrobot_2.xml  WALKER.xml  Walker2D.xml  arm_claw.xml  arm_hand.xml  cartpole.xml  cartpole_isaac.xml  differentiable_obs.xml  double_cart_pole.xml  doubleintegrator.xml  doubleintegrator_sparse.xml  extended_cartpole.xml  finger.xml  finger_isaac.xml  finger_ng.xml  franka_panda.xml  franka_sparse_env.xml  invertedPendulum.xml  pendulum.xml  planar_3_link.xml  planar_3_link_heavy.xml  planar_3_link_isaac.xml  planar_3link_point_mass.xml  point_mass.xml  rand_point_mass.xml  rand_point_mass_no_obs.xml  rand_point_mass_planar_3.xml  rand_point_mass_planar_3_example.xml  reacher.xml  simple_point_mass.xml
models/anymal/urdf/: anymal.urdf  model.xml
models/assets/: actuator0.xml  actuator1.xml  assets.xml  chain0.xml  frc_actuator0.xml
models/assets_franka/: assets.xml  frc_actuator0.xml  pos_actuator0.xml
models/assets_hand/hand/: manipulate_block.xml  manipulate_pen.xml  shared.xml
models/contact_comp/: double_point_mass.xml  finger_contact_comp.xml  finger_contact_example.xml  planar_push.xml  planar_push_2d.xml  point_mass_tendon.xml
models/planar_3d_examples/: comp_1.xml  planar_good_comp_1.xml  planar_good_comp_2.xml  planar_good_comp_3.xml  planar_good_comp_4.xml  planar_good_comp_5.xml  planar_good_comp_6.xml  planar_good_comp_7.xml  planar_good_comp_complex.xml
models/point_mass_examples/: rand_point_mass_good.xml  rand_point_mass_good2.xml  rand_point_mass_good3.xml  rand_point_mass_good4.xml  rand_point_mass_good5.xml
src/: CMakeLists.txt
src/0_preliminaries/: pd.cpp
src/2.1_LQR/: CMakeLists.txt  LQR-Acrobot.cpp  LQR-pendulum.cpp
src/controller/: CMakeLists.txt  FIC.h  MPPI.cpp  MPPI.h  controller.cpp  controller.h  cost_function.cpp  cost_function.h  generic_control.h  generic_cost.h  ilqr.cpp  ilqr.h  mppi_ddp.cpp  mppi_ddp.h  mppi_ddp_rr.cpp  mppi_ddp_rr.h  par_mppi_ddp.cpp  par_mppi_ddp.h  simulation_params.h
src/observers/: CMakeLists.txt  sensors.cpp  sensors.h
src/parameters/: CMakeLists.txt  simulation_params.h
src/utilities/: CMakeLists.txt  basic_math.cpp  basic_math.h  buffer.h  buffer_utils.h  eigen_norm_dist.h  eigen_norm_dist_2.h  fast_derivatives.h  finite_diff.cpp  finite_diff.h  generic_algs.h  generic_utils.h  internal_types.h  math_utils.h  mujoco_utils.cpp  mujoco_utils.h  zmq_utils.h
test/: CMakeLists.txt  derivative_tests.cpp  finite_diff_tests.cpp  open_mp_tests.cpp  opt_tests.cpp
test/data/: datacartpole_ctrl_vec.csv  datacartpole_ctrl_vec_mppi_ilqr.csv  datacartpole_ctrl_vec_mppi_ilqr_1_thread.csv  datacartpole_ctrl_vec_mppi_ilqr_8_thread.csv
