
#find_package(glfw3 REQUIRED)
#include_directories(${GLFW_INCLUDE_DIRS})
#link_libraries(${GLFW_LIBRARY_DIRS})

#find_package(GLEW REQUIRED)
#include_directories(${GLEW_INCLUDE_DIRS})


#add_executable(pd pd.cpp)
#target_link_libraries(pd ${LIB_MUJOCO})

#Standard libraries for GL
#target_link_libraries(pd GL GLU glut )

#Additional libraries from mujoco package
#target_link_libraries(pd ${GLEW_LIBRARIES} libglfw.so)
